[workspace]
resolver = "2"
members = ["subs", "prover", "types", "subsd", "examples/registry-server"]

[workspace.dependencies]
libveritas = { git = "https://github.com/spacesprotocol/libveritas.git", features = ["elf"] }
libveritas_zk = { git = "https://github.com/spacesprotocol/libveritas.git"}
libveritas_testutil = { git = "https://github.com/spacesprotocol/libveritas.git" }
subs-types = { path = "types" }
subs-prover = { path = "prover" }


# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
