[workspace]
resolver = "2"
members = ["subs", "prover", "types", "subsd", "examples/registry-server"]

[workspace.dependencies]
libveritas = { version = "=0.1.2", features = ["elf"] }
libveritas_zk = "=0.1.1"
libveritas_testutil = "=0.1.2"
subs-types = { path = "types" }
subs-prover = { path = "prover" }
spacedb = "0.1"
relay = { git = "https://github.com/spacesprotocol/certrelay.git" }
fabric = { package = "fabric-resolver", version = "=0.1.2" }



