[package]
name = "subs-prover"
version = "0.1.0"
edition = "2021"
description = "ZK prover for subs - generates STARK/SNARK proofs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "subs-prover"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "3.0.5", features = ["std", "prove"] }
libveritas = { workspace = true }
libveritas_zk = { workspace = true }
subs-types = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
borsh = { version = "1.6", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
urlencoding = "2.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
default = []
