[package]
name = "subs"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "spaced"
path = "tests/bin/spaced.rs"

[lib]
path = "src/lib.rs"

[dependencies]
risc0-zkvm = { version = "3.0.5", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bitcoin = { version = "0.32.2", features = ["base64", "serde", "rand-std"] }
spacedb = { git = "https://github.com/spacesprotocol/spacedb.git", version = "0.0.11" }

spaces_protocol = { git = "https://github.com/spacesprotocol/spaces.git", branch = "subspaces", features = ["std"] }
spaces_ptr = { git = "https://github.com/spacesprotocol/spaces.git", branch = "subspaces", features = ["std"] }
spaces_client = { git = "https://github.com/spacesprotocol/spaces.git", branch = "subspaces" }
spaces_wallet = { git = "https://github.com/spacesprotocol/spaces.git", branch = "subspaces" }
fabric = {git = "https://github.com/spacesprotocol/certrelay.git" }

libveritas = { workspace = true }
libveritas_zk = { workspace = true }
subs-types = { workspace = true }

clap = { version = "4.5.32", features = ["derive", "cargo"] }
serde_json = "1.0.140"
atty = "0.2.14"
anyhow = "1.0.97"
hex = "0.4.3"
borsh = { version = "1.5", default-features = false, features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.11.2"
base64 = "0.22.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.8"
log = "0.4.29"

[features]
default = []


[dev-dependencies]
tempfile = "3"
spaces_testutil = { git = "https://github.com/spacesprotocol/spaces.git", branch = "subspaces" }
subs-prover = { workspace = true }

