[package]
name = "subsd"
version = "0.1.0"
edition = "2021"
description = "HTTP REST API server for subs operations"
default-run = "subsd"

[[bin]]
name = "subsd"
path = "src/main.rs"

[dependencies]
subs = { path = "../subs" }
subs-types = { workspace = true }

axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
askama = "0.12"
askama_axum = "0.4"

spaces_client = "0.1"
spaces_protocol = { version = "0.1", features = ["std"] }
spaces_wallet = { version = "0.1", optional = true }
spaces_testutil = { git = "https://github.com/spacesprotocol/spaces.git", branch = "subspaces", optional = true }
libveritas = { workspace = true }
bitcoin = { version = "0.32.2", features = ["rand-std"] }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
env_logger = "0.11"
log = "0.4"

relay = { workspace = true, optional = true }

[features]
default = []
test-rig = ["dep:spaces_testutil", "dep:spaces_wallet", "dep:relay"]
